# zephyr-app

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: rust.yml
cmake/: Dependencies.cmake  Platform.cmake  TargetConfig.cmake
core/mac/include/: core_graphics.h
core/mac/src/: app.cpp
include/ZAKit/: app_runner.hpp  bridge.hpp
include/ZAKit/managers/: shaders_manager.hpp
include/ZCApp/: app_runner.hpp  shaders.hpp
include/ZCApp/app/: app_runner.hpp  data_manager.hpp
include/ZCApp/app/scenes/: apperance.hpp  utils.hpp
include/ZCApp/app/scenes/main/: main_scene.hpp
include/ZCApp/app/scenes/main/widgets/: chat_area.hpp  connection_button.hpp  connection_list.hpp  connection_modal.hpp  friend_button.hpp  friend_list.hpp  input_message_button.hpp  modal_input_field.hpp  request_modal.hpp
include/ZCApp/app/scenes/network/: handle.hpp
include/ZCApp/app/test/: test_runner.hpp
include/ZCApp/graphics/: framebuffer.hpp  renderer.hpp  window.hpp
include/ZCApp/graphics/effects/: blur.hpp  fullscreen_blur.hpp  partial_blur.hpp
include/ZCApp/graphics/fonts/: font_loader.hpp  font_manager.hpp  font_renderer.hpp
include/ZCApp/graphics/objects/: background.hpp  blur.hpp  text.h  text.hpp  text_style.hpp
include/ZCApp/graphics/objects/shapes/: container.hpp  rectangle.hpp  shape.hpp
include/ZCApp/graphics/objects/text/: text.hpp  text_style.hpp
include/ZCApp/graphics/scene/: scene.hpp
include/ZCApp/graphics/shaders/: shaders.hpp
include/ZCApp/graphics/shapes/: container.hpp  rectangle.hpp  shape.hpp
include/ZCApp/graphics/textures/: fan_texture.hpp  quad_texture.hpp  texture.hpp  texture_loader.hpp  texture_manager.hpp
include/ZCApp/graphics/utils/: circle_util.hpp  colour.hpp  glm_util.hpp  math_util.hpp  perspective_util.hpp  scissor.hpp  string_util.hpp  time_util.hpp
include/ZCApp/ipc/: client.hpp
include/ZCApp/managers/: shaders_manager.hpp
include/ZCApp/shaders/: shader.hpp  shader_manager.hpp  shaders.hpp
include/ZCGKit/: display.hpp  external.hpp  zcg_interface.h
include/ZCGKit/ipc/: client.hpp
include/ZCKit/: bridge.hpp
include/ZCKit/internal/: app_runner.hpp  util.hpp
modules/app/: Cargo.toml
modules/app/include/ZAKit/: app_runner.hpp  executor.hpp  loader.hpp  util.hpp
modules/app/src/: app_launcher.cpp  executor.cpp  lib.rs  loader.cpp  util.cpp
modules/bridge/: CMakeLists.txt
modules/bridge/include/ZAKit/: bridge.hpp
modules/bridge/src/: bridge.cpp
modules/core/: CMakeLists.txt
modules/core/app/: CMakeLists.txt
modules/core/app/src/: app_runner.cpp
modules/core/graphics/: CMakeLists.txt
modules/core/graphics/include/ZAKit/: shaders.hpp
modules/core/graphics/include/ZCApp/: shaders.hpp
modules/core/graphics/src/: app.cpp
modules/core/shared/: CMakeLists.txt
modules/core/shared/include/ZAKit/managers/: shaders_manager.hpp
modules/core/shared/src/: shaders_manager.cpp  test.cpp
modules/graphics/darwin/include/: cg_interface.h  shaders.hpp
modules/graphics/darwin/include/ZAKit/: cg_interface.h  shaders.hpp
modules/graphics/darwin/src/: app.cpp
modules/launcher/: CMakeLists.txt
modules/launcher/include/ZCKit/internal/: util.hpp
modules/launcher/src/: app_launcher.cpp  util.cpp
modules/launcher/src/internal/: util.cpp
modules/shared/: CMakeLists.txt
modules/shared/src/: shaders_manager.cpp
src/: app.rs  main.rs
src/app/: app_runner.cpp  data_manager.cpp  shaders.rs  window.rs
src/app/scenes/main/: main_scene.cpp
src/app/scenes/main/widgets/: chat_area.cpp  connection_button.cpp  connection_list.cpp  connection_modal.cpp  input_message_button.cpp  modal_input_field.cpp  request_modal.cpp
src/app/test/: test_runner.cpp
src/app/utils/: util.rs
src/bridge/: bridge.cpp
src/graphics/: framebuffer.cpp  renderer.cpp  shaders_manager.cpp  window.cpp
src/graphics/effects/: blur.cpp  fullscreen_blur.cpp  partial_blur.cpp
src/graphics/fonts/: font_loader.cpp  font_manager.cpp  font_renderer.cpp
src/graphics/objects/: background.cpp  text.cpp
src/graphics/objects/shapes/: rectangle.cpp
src/graphics/shader/: shader.cpp  shader_manager.cpp  shaders.cpp
src/graphics/shapes/: rectangle.cpp
src/graphics/textures/: fan_texture.cpp  quad_texture.cpp  texture_loader.cpp  texture_manager.cpp
src/graphics/utils/: perspective_util.cpp
src/internal/: base64.cpp  util.cpp
src/launcher/: app_launcher.cpp  app_runner.cpp
tools/: Dependencies.cmake  Platform.cmake
